initial commit: adde search results page, cleaned up settings variables

--- a/scss/_sc-config.scss
+++ b/scss/_sc-config.scss
@@ -19,6 +19,7 @@
 @import 'sc-src/forms';
 @import 'sc-src/grid';
 @import 'sc-src/icons';
+@import 'sc-src/menus';
 @import 'sc-src/modals';
 @import 'sc-src/offcanvas';
 @import 'sc-src/tabs';
