--- a/scss/sc-src/_utilites.scss
+++ b/scss/sc-src/_utilites.scss
@@ -1,5 +1,20 @@
 // Helpers
 // -------
+// Typoraphy
+// Flexbox
+// Spacing
+//
+
+
+// Typoraphy
+
+.fw-normal {
+	font-weight: $font-weight-normal !important;
+}
+
+.fw-bold {
+	font-weight: $font-weight-bold !important;
+}
 
 // Flexbox
 
