--- a/scss/sc-src/_grid.scss
+++ b/scss/sc-src/_grid.scss
@@ -22,6 +22,10 @@
 		grid-template-columns: repeat(2, 1fr);
 	}
 
+	.card-list-md-4 {
+		grid-template-columns: repeat(4, 1fr);
+	}
+
 }
 
 @media screen and (min-width: $breakpoint-xl) {
