--- a/scss/sc-src/_typography.scss
+++ b/scss/sc-src/_typography.scss
@@ -45,7 +45,7 @@ hr {
 	padding: 0;
 	height: 1px;
 	border: 0;
-	border-top: 1px solid $light-gray;
+	border-top: 1px solid $color-border;
 	box-sizing: content-box;
 }
 
