initial commit of blog post template, added breadcrumbs, post meta styles, typography updates

--- a/scss/_sc-settings.scss
+++ b/scss/_sc-settings.scss
@@ -34,6 +34,7 @@ $color-link: $color-secondary-2;
 $font-weight-bold: 700;
 $font-weight-normal: 400;
 $text-uppercase: uppercase;
+$text-small: 0.875rem;
 
 // UI Panels
 $panel-bg: $color-light-grey;
