added space between inline search form wrappers on small screens, added relative position as fallback for usage without carousel cells

--- a/scss/sc-src/_banner.scss
+++ b/scss/sc-src/_banner.scss
@@ -32,6 +32,7 @@
 .hero-title {
   position: relative;
 	margin: 0;
+	color: $color-white;
 	font-size: 1.75rem;
 	line-height: 1.25;
   z-index: 2;
