--- a/scss/sc-src/_offcanvas.scss
+++ b/scss/sc-src/_offcanvas.scss
@@ -1,27 +1,29 @@
 .sc-off-canvas {
   padding: 3rem 1.5rem 1.5rem;
-  background-color: $color-white;
-  box-shadow: inset 7px 0 8px -6px $light-gray !important;
+  background-color: $color-primary;
+  //box-shadow: inset 7px 0 8px -6px $black !important;
 
   .close-button {
     top: 0;
     right: 0;
-    padding: 1rem;
+		padding: 1rem;
+		color: $color-white;
     font-size: 1rem;
   }
 
   .menu a,
   .menu a:hover {
     padding: 1rem 0;
-    color: $color-grey-medium;
-    text-transform: none;
+    color: $color-white;
+		text-transform: none;
+		outline: none;
   }
 
   // Menu separator
   hr {
     margin: 1rem 0;
     height: 0px;
-    border: solid $light-gray;
+    border: solid rgba($color-white, 0.25);
     border-width: 1px 0px 0px;
   }
 }
@@ -45,7 +47,7 @@
     padding: 0;
     width: 34px;
     height: 34px;
-    border: 1px solid rgba($color-grey-medium, 0.5);
+    border: 1px solid rgba($color-white, 0.5);
     border-radius: $border-radius-circle;
   }
   a + a {
