--- a/css/app.css
+++ b/css/app.css
@@ -6327,6 +6327,22 @@ section {
   padding-top: 2rem;
   border-top: 1px solid #e6e6e6; }
 
+.breadcrumbs-wrapper {
+  margin-bottom: 2rem; }
+
+.meta {
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  font-size: 0.875rem; }
+  .meta .meta-category {
+    display: block; }
+
+.article h2 {
+  margin-top: 2.5rem; }
+
+.article h3 {
+  margin-top: 1.5rem; }
+
 .sc-header .top-bar {
   padding: 0.75rem 1rem;
   background-color: #005593; }
@@ -6509,6 +6525,7 @@ section {
 .hero-title {
   position: relative;
   margin: 0;
+  color: #fff;
   font-size: 1.75rem;
   line-height: 1.25;
   z-index: 2; }
@@ -6608,6 +6625,10 @@ input[type='text'], [type='password'], [type='email'], [type='number'], [type='s
     height: 2.4375rem; }
 
 @media screen and (max-width: 29.9375em) {
+  .search .cell {
+    margin-bottom: 1rem; }
+    .search .cell:last-child {
+      margin-bottom: 0; }
   .search .input-group {
     flex-wrap: wrap; }
   .search .input-group-button {
@@ -6749,22 +6770,23 @@ input[type='text'], [type='password'], [type='email'], [type='number'], [type='s
 
 .sc-off-canvas {
   padding: 3rem 1.5rem 1.5rem;
-  background-color: #fff;
-  box-shadow: inset 7px 0 8px -6px #e6e6e6 !important; }
+  background-color: #005593; }
   .sc-off-canvas .close-button {
     top: 0;
     right: 0;
     padding: 1rem;
+    color: #fff;
     font-size: 1rem; }
   .sc-off-canvas .menu a,
   .sc-off-canvas .menu a:hover {
     padding: 1rem 0;
-    color: #727272;
-    text-transform: none; }
+    color: #fff;
+    text-transform: none;
+    outline: none; }
   .sc-off-canvas hr {
     margin: 1rem 0;
     height: 0px;
-    border: solid #e6e6e6;
+    border: solid rgba(255, 255, 255, 0.25);
     border-width: 1px 0px 0px; }
 
 .sc-off-canvas .is-accordion-submenu-parent:not(.has-submenu-toggle) > a::after {
@@ -6780,7 +6802,7 @@ input[type='text'], [type='password'], [type='email'], [type='number'], [type='s
     padding: 0;
     width: 34px;
     height: 34px;
-    border: 1px solid rgba(114, 114, 114, 0.5);
+    border: 1px solid rgba(255, 255, 255, 0.5);
     border-radius: 50%; }
   .sc-off-canvas .oc-menu-social a + a {
     margin-left: 0.75rem; }
@@ -6836,10 +6858,7 @@ input[type='text'], [type='password'], [type='email'], [type='number'], [type='s
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
-h2 {
-  color: #005593; }
-
-h3 {
+h1 {
   color: #005593; }
 
 .text-lead {
@@ -6905,6 +6924,7 @@ hr {
     width: 33.3333%; } }
 
 .hero-carousel {
+  position: relative;
   background: #01266C; }
   .hero-carousel img {
     width: 100%;
