--- a/scss/_sc-config.scss
+++ b/scss/_sc-config.scss
@@ -1,3 +1,6 @@
+// Custom Font
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700');
+
 // Global Variables
 @import 'sc-settings';
 
