changed header font weight to medium, maybe this looks better?

--- a/scss/sc-src/_base.scss
+++ b/scss/sc-src/_base.scss
@@ -293,28 +293,9 @@ section {
 
 .breadcrumbs-wrapper {
 	margin-bottom: $spacing-xl;
-}
 
-
-// Articles
-
-.meta {
-	margin-top: $spacing-md;
-	margin-bottom: $spacing-xl;
-	font-size: $text-small;
-
-	.meta-category {
-		display: block;
-	}
-}
-
-.article {
-
-	h2 {
-		margin-top: $spacing-2xl;
-	}
-
-	h3 {
-		margin-top: $spacing-lg;
+	li {
+		text-transform: none;
+		font-size: $text-small;
 	}
 }
