--- a/scss/sc-src/_header.scss
+++ b/scss/sc-src/_header.scss
@@ -17,7 +17,7 @@
 
 		a {
 			color: $color-white;
-			font-weight: $global-weight-bold;
+			font-weight: $font-weight-medium;
 			text-transform: uppercase;
 
 			&:hover {
