--- a/css/app.css
+++ b/css/app.css
@@ -5,6 +5,7 @@
  * foundation.zurb.com
  * Licensed under MIT Open Source
  */
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700");
 @media print, screen and (min-width: 40em) {
   .reveal, .reveal.tiny, .reveal.small, .reveal.large {
     right: auto;
@@ -2484,11 +2485,11 @@ h6, .h6 {
 
 a {
   line-height: inherit;
-  color: #00a5a1;
+  color: #005593;
   text-decoration: none;
   cursor: pointer; }
   a:hover, a:focus {
-    color: #008e8a; }
+    color: #00497e; }
   a img {
     border: 0; }
 
@@ -3719,7 +3720,7 @@ select {
   content: '';
   border-right-width: 0;
   border-left-style: solid;
-  border-color: transparent transparent transparent #00a5a1; }
+  border-color: transparent transparent transparent #005593; }
 
 .drilldown.align-right .is-drilldown-submenu-parent > a::after {
   right: auto;
@@ -3731,7 +3732,7 @@ select {
   content: '';
   border-left-width: 0;
   border-right-style: solid;
-  border-color: transparent #00a5a1 transparent transparent; }
+  border-color: transparent #005593 transparent transparent; }
 
 .drilldown .js-drilldown-back > a::before {
   display: block;
@@ -3796,7 +3797,7 @@ select {
   content: '';
   border-bottom-width: 0;
   border-top-style: solid;
-  border-color: #00a5a1 transparent transparent;
+  border-color: #005593 transparent transparent;
   right: 5px;
   left: auto;
   margin-top: -3px; }
@@ -3842,7 +3843,7 @@ select {
   content: '';
   border-left-width: 0;
   border-right-style: solid;
-  border-color: transparent #00a5a1 transparent transparent; }
+  border-color: transparent #005593 transparent transparent; }
 
 .dropdown.menu.vertical > li.opens-right > a::after {
   display: block;
@@ -3852,7 +3853,7 @@ select {
   content: '';
   border-right-width: 0;
   border-left-style: solid;
-  border-color: transparent transparent transparent #00a5a1; }
+  border-color: transparent transparent transparent #005593; }
 
 @media print, screen and (min-width: 40em) {
   .dropdown.menu.medium-horizontal > li.opens-left > .is-dropdown-submenu {
@@ -3874,7 +3875,7 @@ select {
     content: '';
     border-bottom-width: 0;
     border-top-style: solid;
-    border-color: #00a5a1 transparent transparent;
+    border-color: #005593 transparent transparent;
     right: 5px;
     left: auto;
     margin-top: -3px; }
@@ -3899,7 +3900,7 @@ select {
     content: '';
     border-left-width: 0;
     border-right-style: solid;
-    border-color: transparent #00a5a1 transparent transparent; }
+    border-color: transparent #005593 transparent transparent; }
   .dropdown.menu.medium-vertical > li.opens-right > a::after {
     display: block;
     width: 0;
@@ -3908,7 +3909,7 @@ select {
     content: '';
     border-right-width: 0;
     border-left-style: solid;
-    border-color: transparent transparent transparent #00a5a1; } }
+    border-color: transparent transparent transparent #005593; } }
 
 @media print, screen and (min-width: 64em) {
   .dropdown.menu.large-horizontal > li.opens-left > .is-dropdown-submenu {
@@ -3930,7 +3931,7 @@ select {
     content: '';
     border-bottom-width: 0;
     border-top-style: solid;
-    border-color: #00a5a1 transparent transparent;
+    border-color: #005593 transparent transparent;
     right: 5px;
     left: auto;
     margin-top: -3px; }
@@ -3955,7 +3956,7 @@ select {
     content: '';
     border-left-width: 0;
     border-right-style: solid;
-    border-color: transparent #00a5a1 transparent transparent; }
+    border-color: transparent #005593 transparent transparent; }
   .dropdown.menu.large-vertical > li.opens-right > a::after {
     display: block;
     width: 0;
@@ -3964,7 +3965,7 @@ select {
     content: '';
     border-right-width: 0;
     border-left-style: solid;
-    border-color: transparent transparent transparent #00a5a1; } }
+    border-color: transparent transparent transparent #005593; } }
 
 .dropdown.menu.align-right .is-dropdown-submenu.first-sub {
   top: 100%;
@@ -4017,7 +4018,7 @@ select {
     content: '';
     border-left-width: 0;
     border-right-style: solid;
-    border-color: transparent #00a5a1 transparent transparent; }
+    border-color: transparent #005593 transparent transparent; }
   .is-dropdown-submenu .is-dropdown-submenu-parent.opens-right > a::after {
     display: block;
     width: 0;
@@ -4026,7 +4027,7 @@ select {
     content: '';
     border-right-width: 0;
     border-left-style: solid;
-    border-color: transparent transparent transparent #00a5a1; }
+    border-color: transparent transparent transparent #005593; }
   .is-dropdown-submenu .is-dropdown-submenu {
     margin-top: -1px; }
   .is-dropdown-submenu > li {
@@ -6329,19 +6330,9 @@ section {
 
 .breadcrumbs-wrapper {
   margin-bottom: 2rem; }
-
-.meta {
-  margin-top: 1rem;
-  margin-bottom: 2rem;
-  font-size: 0.875rem; }
-  .meta .meta-category {
-    display: block; }
-
-.article h2 {
-  margin-top: 2.5rem; }
-
-.article h3 {
-  margin-top: 1.5rem; }
+  .breadcrumbs-wrapper li {
+    text-transform: none;
+    font-size: 0.875rem; }
 
 .sc-header .top-bar {
   padding: 0.75rem 1rem;
@@ -6352,7 +6343,7 @@ section {
   background-color: transparent; }
   .sc-header .menu a {
     color: #fff;
-    font-weight: bold;
+    font-weight: 600;
     text-transform: uppercase; }
     .sc-header .menu a:hover {
       color: rgba(255, 255, 255, 0.7); }
@@ -6439,6 +6430,51 @@ section {
     background-color: #fff;
     border-radius: 50%; }
 
+.meta {
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  font-size: 0.875rem; }
+  .meta .meta-category {
+    display: block; }
+
+.article h2 {
+  margin-top: 2.5rem;
+  font-size: 1.5rem;
+  font-weight: 600; }
+
+.article h3 {
+  margin-top: 1.5rem;
+  font-size: 1.25rem;
+  font-weight: 600; }
+
+.article article ul, .article article ol {
+  margin-top: 2rem;
+  margin-bottom: 2rem; }
+
+.article article ul {
+  list-style-image: url("data:image/svg+xml,<svg width='8' height='8' xmlns='http://www.w3.org/2000/svg'><circle cx='3' cy='3' r='3' fill='#00a5a1'/></svg>"); }
+
+.article article li {
+  margin-bottom: 0.75rem;
+  padding-left: 0.75rem; }
+
+.article blockquote {
+  margin: 2rem 0;
+  padding: 1.5rem 2rem;
+  background-color: #f4f4f4;
+  border-left: 4px solid #00a5a1;
+  color: #0a0a0a; }
+
+.article-sidebar .card {
+  margin-bottom: 2rem; }
+
+.article-list-header {
+  margin-bottom: 2.5rem;
+  padding-bottom: 0.75rem;
+  font-size: 1.5rem;
+  font-weight: 600;
+  border-bottom: 1px solid #e6e6e6; }
+
 .article-list-item {
   margin-bottom: 2.5rem; }
 
@@ -6458,6 +6494,10 @@ section {
   color: #00a5a1;
   font-weight: 600; }
 
+@media screen and (max-width: 63.938em) {
+  .article-sidebar .card {
+    margin-top: 2.5rem; } }
+
 @media screen and (min-width: 40em) {
   .article-list-item {
     display: flex; }
@@ -6470,6 +6510,10 @@ section {
 @media screen and (min-width: 48em) {
   .article-list-image {
     flex: 1 0 25%; } }
+
+@media screen and (min-width: 64em) {
+  .article article.cell {
+    padding-right: 3rem; } }
 
 .accordion-item {
   border-top: 1px solid #cacaca; }
@@ -6668,10 +6712,10 @@ input[type='text'], [type='password'], [type='email'], [type='number'], [type='s
   margin-bottom: 0.5rem; }
 
 .card:hover .card-title {
-  color: #008e8a; }
+  color: #00497e; }
 
 .card-title {
-  color: #00a5a1;
+  color: #005593;
   font-size: 1rem; }
 
 @font-face {
@@ -6863,6 +6907,9 @@ h1 {
 
 .text-lead {
   font-size: 1.25rem; }
+
+.text-small {
+  font-size: 0.875rem; }
 
 blockquote cite {
   padding-top: 1rem;
