--- a/scss/sc-src/_header.scss
+++ b/scss/sc-src/_header.scss
@@ -14,6 +14,7 @@
 	.menu {
 		align-items: center;
 		background-color: transparent; // Reset background colour
+    z-index: 3;
 
 		a {
 			color: $color-white;
