Banner css tweaks
Added styles for when no banner available, defaults to generic image with less hight. Also adjusted banner width breakpoints in code as per static templates.

--- a/scss/_sc-settings.scss
+++ b/scss/_sc-settings.scss
@@ -75,6 +75,11 @@ $hero-image-md: 300px; // 480px
 $hero-image-lg: 480px; // 768px
 $hero-image-xl: 600px; // 1200px
 
+$no-hero-image-sm: 125px; // Default
+$no-hero-image-md: 150px; // 480px
+$no-hero-image-lg: 175px; // 768px
+$no-hero-image-xl: 225px; // 1200px
+
 // Spacing
 $spacing-3xs: 0.125rem; // 2px
 $spacing-2xs: 0.25rem;  // 4px
