Latest php and css updates

--- a/scss/sc-src/_tabs.scss
+++ b/scss/sc-src/_tabs.scss
@@ -11,6 +11,10 @@
 		padding-top: $spacing-3xl;
 		border: 0;
   }
+
+  .tabs-content p {
+		text-align: justify;
+  }
   
   .tabs-panel {
 		padding: 0;
