New site live Version

--- a/scss/sc-src/_blog.scss
+++ b/scss/sc-src/_blog.scss
@@ -117,6 +117,12 @@ aside {
 	}
 }
 
+@media screen and (max-width: $breakpoint-sm) {
+	.article-list-title {
+		margin-top: $spacing-md;
+	}
+}
+
 .category-tag {
 	display: block;
 	margin-top: $spacing-md;
